--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,10 @@ knitr::opts_chunk$set(
 # dcData
 
 <!-- badges: start -->
+[![R build status](https://github.com/mdbeckman/dcData/workflows/R-CMD-check/badge.svg)](https://github.com/mdbeckman/dcData/actions)
 <!-- badges: end -->
 
-The goal of dcData is to ...
+The goal of `dcData` is to 
 
 ## Installation
 
@@ -51,10 +52,3 @@ summary(cars)
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
