--- a/README.Rmd
+++ b/README.Rmd
@@ -19,36 +19,44 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/mdbeckman/dcData/workflows/R-CMD-check/badge.svg)](https://github.com/mdbeckman/dcData/actions)
 <!-- badges: end -->
 
-The goal of `dcData` is to 
+The `dcData` package includes data sets that accompany the *DataComputing* eBook <https://dtkaplan.github.io/DataComputingEbook/> used to teach wrangling and visualization techniques that turn data into information.
 
 ## Installation
 
-You can install the released version of dcData from [CRAN](https://CRAN.R-project.org) with:
+The development version of `dcData` can be installed from [GitHub](https://github.com/) with:
 
-``` r
-install.packages("dcData")
-```
-
-And the development version from [GitHub](https://github.com/) with:
-
-``` r
-# install.packages("devtools")
+```{r eval=FALSE, include=TRUE}
+library(devtools)
 devtools::install_github("mdbeckman/dcData")
 ```
-## Example
 
-This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-library(dcData)
-## basic example code
-```
+<!-- You can install the released version of dcData from [CRAN](https://CRAN.R-project.org) with: -->
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+<!-- ``` r -->
+<!-- install.packages("dcData") -->
+<!-- ``` -->
 
-```{r cars}
-summary(cars)
-```
+<!-- And the development version from [GitHub](https://github.com/) with: -->
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
+<!-- ``` r -->
+<!-- # install.packages("devtools") -->
+<!-- devtools::install_github("mdbeckman/dcData") -->
+<!-- ``` -->
+<!-- ## Example -->
+
+<!-- This is a basic example which shows you how to solve a common problem: -->
+
+<!-- ```{r example} -->
+<!-- library(dcData) -->
+<!-- ## basic example code -->
+<!-- ``` -->
+
+<!-- What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so: -->
+
+<!-- ```{r cars} -->
+<!-- summary(cars) -->
+<!-- ``` -->
+
+<!-- You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>. -->
 
